--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
 		<meta charset="utf-8">
-		<title>Perfect Design | One page HTML5 template</title>
+		<title>GD|INFO</title>
 		<meta name="description" content="">
 		<meta name="keywords" content="">
 		<meta name="author" content="Perfect Point Marketing">
@@ -65,16 +65,16 @@
 			
 			<div class="welcome-text">
 				<div class="container">
-					<h2 class="wow animated fadeInDown">We Are Awesome</h2>
-					<p class="wow animated fadeInUp">Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer</p>
+					<h2 class="wow animated fadeInDown">welcome</h2>
+					<p class="wow animated fadeInUp">Welcome to Guo Zhiping's personal website.</p>
 					
 					<div class="social-bookmark animated bounceInLeft">
-						<a class="animated fadeInDown" href=""><i class="fa fa-facebook-square"></i></a>
-						<a href=""><i class="fa fa-twitter-square"></i></a>
-						<a href=""><i class="fa fa-linkedin-square"></i></a>
-						<a href=""><i class="fa fa-google-plus-square"></i></a>
-						<a href=""><i class="fa fa-youtube-square"></i></a>
-						<a href=""><i class="fa fa-instagram"></i></a>
+						<a class="animated fadeInDown" href=""><i class="fa fa-flickr"></i></a>
+						<a href=""><i class="fa fa-flickr"></i></a>
+						<a href=""><i class="fa fa-flickr"></i></a>
+						<a href=""><i class="fa fa-flickr"></i></a>
+						<a href=""><i class="fa fa-flickr"></i></a>
+						<a href=""><i class="fa fa-flickr"></i></a>
 						<a href=""><i class="fa fa-flickr"></i></a>
 					</div>
 				</div>
@@ -86,12 +86,12 @@
                 <div class="container">
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                            <span class="sr-only">Toggle navigation</span>
+                            <span class="sr-only">$$$</span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="index.html">Perfect <span>Design</span></a>
+                        <a class="navbar-brand" href="index.html">GD <span>INFO</span></a>
                     </div>
                     <div class="navbar-collapse collapse">
 
