--- a/index.html
+++ b/index.html
@@ -935,7 +935,7 @@
 				<div class="row">
 					<div class="col-md-9 col-sm-9">
 						<div class="footer-copyright">
-							<p>Copyright 2019 <a href="">本网站属于个人网站，紧张商业用途</a> ===== <a href="http://www.beian.gov.cn/" target="_blank" title="备案地址">桂ICP备19011878号-1</a>
+							<p>Copyright 2019 <a href="">本网站属于个人网站，禁止商业用途</a> ===== <a href="http://www.beian.gov.cn/" target="_blank" title="备案地址">桂ICP备19011878号-1</a>
 						</div>
 					</div><!--copyright col end-->
 					
