--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
     </head>
-    <body onload="init()" id="body">
-
+    <body id="body">
+<!--
 		<div id="preloader">
 			<div class="spinner">
 				<div class="cube"></div>
@@ -56,9 +56,9 @@
 				<div class="cube"></div>
 				<div class="cube"></div>
 			</div>			
-		</div><!--preloader end-->
+		</div>-->
 		
-		
+		<!--
 		<section id="home">
 			<div data-velocity="-.3" class="home-parallax"></div>
 			<div class="home-overlay"></div>
@@ -79,7 +79,7 @@
 					</div>
 				</div>
 			</div>
-		</section><!--home section end-->
+		</section> -- > <!--home section end-->
 		
         <nav id="navigation">
             <div class="navbar navbar-default navbar-static-top" role="navigation">
