--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
                     </div>
                     <div class="navbar-collapse collapse">
 
-                        <ul class="nav navbar-nav navbar-right">
-                            <li><a href="#home">Home</a></li>
-                            <li><a href="#about">About</a></li>
+ 			<ul class="nav navbar-nav navbar-right">
+                            <li><a href="#about">Home</a></li>
                             <li><a href="#features">Features</a></li>
                             <li><a href="#projects">Projects</a></li>
                             <li><a href="#hobby">Hobby</a></li>
                             <li><a href="#blog">Blog</a></li>
                         </ul>
+
 
                     </div><!--/.nav-collapse -->
                 </div><!--/.container -->
